test/extern/kbrady/extern_string.good
extern_string.chpl:1: error: extern procedures should not take arguments of type string, use c_string instead
